--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/4809c3695c.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montez&family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
@@ -13,7 +14,7 @@
 <body id="aboutMe">
   <header>
     <div class="headertop">
-      <h1 class="h1about">Marie Petit</h1>
+      <h1 class="h1about"><strong>Marie Petit</strong> </h1>
       <a href="index.html"><img class="etoileAbout" src="assets/img/etoileblanche.png" alt="Etoile menu"></a>
     </div>
     <div class="headerbottom">
@@ -23,22 +24,19 @@
           <li><a class="menuitem" href="cv.html"> Curriculum vitae</a></li>
           
         </ul>
-        <h2 id="ui">UI designer</h2>
+        <h2 id="ui"><strong>UI designer junior</strong></h2>
       </nav> 
     </div>
   </header>
   <main id="mainAbout">
-    <div class="blocphoto">
+    <section class="blocphoto">
       <img class="photo" src="assets/img/phtonb2.jpg" alt="Photo de Marie PETIT">
-    </div>
-    <div class="bloctexte">
+    </section>
+    <section class="bloctexte">
       <h2>Bienvenue!</h2>
       <p>Je suis actuellement une formation de Concepteur Designer User Interface à l'école <span>LA MANU</span>  à Amiens depuis octobre 2021. <br> Une reconversion pour moi après plus d'une dizaine d'années dans la relation client et le commerce. <br> Curieuse et créative, c'est avec envie et soif d'apprendre que je parcours ce chemin. Vous trouverez ici, mon CV ainsi que mon portfolio agrémenté des projets effectués en formation. Je suis à la recherche d'un stage de 6 semaines afin de valider mon titre dans quelques mois. N'hésitez pas à me contacter, j'ai hâte de vous rencontrer!  </p>
-    </div>
-    <!-- <p>j'aimerais rendre le numérique plus humain afin de faire du monde un meilleur endroit pour intéragir. Je souhaite faire de vos projets une expérience unique et magique!</p> -->
-    <!-- <div class="imgabout">
-      <img class="imgetoile"src="assets/img/etoile aboutme.png" alt="">
-    </div> -->
+    </section> 
   </main> 
+ 
 </body>
 </html>
